// protos/chat_service.proto
syntax = "proto3";

package chat;

service ChatService {
  rpc ChatStream(stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string id = 1;
  string user_id = 2;
  string username = 3;
  string content = 4;
  string room_id = 5;
  int64 timestamp = 6;
  MessageType type = 7;
}

enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  FILE = 2;
  SYSTEM = 3;
}